2003-03-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* m4/Makefile.am:
	* m4/typedef.m4: new file to get underlined type for a typedef.
	
	* configure.in: get at configure time the real underlined type
	  for size_t and ptrdiff_t

	* libregex/stl.pat: move to ...
	* libregex/stl.pat.in: here. Use @SIZE_T_TYPE@ ans @PTRDIFF_T_TYPE@
	* libregex/Makefile.am: update according
	* libregex/.cvsignore: ingre stl.pat

2003-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: use $OP_HELP not op_help
	* utils/op_help.c: remove short option for --get-cpu-frequency

2003-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* m4: new directory
	* m4/.cvsignore: new

	* acinclude.m4: move to
	* m4/qt.m4: here
	* m4/Makefile.am: new for EXTRA_DIST = all our .m4
	* Makefile.am:
	* configure.in:
	* autogen.sh: handle m4 subdir, add -I m4 to aclocal flags

2003-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	  Suggested by John

	* libutil/op_cpufreq.c: typo in comment

	* utils/op_help.c: add --get-cpu-frequency, intentionnaly not
	  documented.
	* utils/opcontrol: use op_help --get-cpu-frequency and remove
	  ugly shell script doing the same thing.

2003-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_cpufreq.h:
	* libutil/op_cpufreq.c: new file exporting op_cpu_frequency()
	* libutil/Makefile.am: update according

	* utils/opcontrol: handle other arch

	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp: remove get_cpu_speed()
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: and use instead op_cpu_frequency()

	* daemon/oprofiled.c:
	* dae/oprofiled.c: replace --cpu-speed option by a call to
	  op_cpu_frequencey()

2003-03-20  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: doc some 2.5 module stuff

2003-03-20  John Levon  <levon@movementarian.org>

	* utils/opcontrol: fix opcontrol --dump to do something

	* daemon/opd_image.c: give a printf when reading the buffer.

2003-03-19  Philippe Elie  <phil.el@wanadoo.fr>
